# DUNE3dstTools

cubeRecon/analysis/: CMakeLists.txt  TEventAnalysis.cxx  TEventAnalysis.hxx  TEventManager.hxx  TG4HitHandler.hxx  TReconClusterElement.cxx  TReconClusterElement.hxx  TReconShowerElement.cxx  TReconShowerElement.hxx  TReconTrackElement.cxx  TReconTrackElement.hxx  TTrajectoryHandler.hxx  analysis.cxx  cubeanalysis_LinkDef.h  quickAna.C
cubeRecon/display/: CMakeLists.txt  README  TEventChangeManager.cxx  TEventChangeManager.hxx  TEventDisplay.cxx  TEventDisplay.hxx  TEventManager.hxx  TFindResultsHandler.cxx  TFindResultsHandler.hxx  TFitChangeHandler.cxx  TFitChangeHandler.hxx  TG4HitChangeHandler.cxx  TG4HitChangeHandler.hxx  TGUIManager.cxx  TGUIManager.hxx  THitChangeHandler.cxx  THitChangeHandler.hxx  TMatrixElement.cxx  TMatrixElement.hxx  TReconClusterElement.cxx  TReconClusterElement.hxx  TReconShowerElement.cxx  TReconShowerElement.hxx  TReconTrackElement.cxx  TReconTrackElement.hxx  TShowHits.cxx  TShowHits.hxx  TTrajectoryChangeHandler.cxx  TTrajectoryChangeHandler.hxx  TVEventChangeHandler.hxx  cubedisp_LinkDef.h  eventDisplay.cxx
scripts/: acceptancePlotter.C  acceptancePlotter2.C  analysis_PID.C  check_HCSep.C  check_STV.C  muonMomAna.C  plot_lownu.C  plot_lownuVSstv.C  plot_nuE.C  plotter2.C  smearing_jairo3.C
src/NuModel/: analysis_3dst.cxx
src/elecSim/: fineTrans.cxx
